# Imagyn

./: .gitignore  CLEANUP_COMPLETE.md  LORA_SERVER_MIGRATION.md  MIGRATION_COMPLETE.md  README.md  TIMEOUT_CONFIGURATION.md  WORKFLOW_AGNOSTIC.md  chatmcp.json  claude_desktop_config.json  config.fal.example.json  config.json  config.replicate.example.json  config_example.json  fix_dependencies.py  pyproject.toml  requirements.txt  robust_mcp_server.py  setup.bat  setup.py  start_imagyn_mcp.bat  start_imagyn_server.bat  start_server.bat  stdio_mcp_server.py  test_backward_compatibility.py  test_lora_server_query.py  test_lora_workflow_application.py  test_mcp_server.py  test_minimal_mcp.py  test_server_init.py  test_setup.py  test_system_cleanup.py  test_tools.py  test_workflow_agnostic.py
docs/: ENHANCED_REPLICATE_INTEGRATION.md  FAL_INTEGRATION.md  PROVIDER_GUIDE.md  REPLICATE_INTEGRATION.md  design.md
src/imagyn/: __init__.py  comfyui_client.py  fastmcp_main.py  fastmcp_server.py  imagyn_server.py  mcp.py  models.py  replicate_client.py  server.py  storage.py
tests/: test_mcp_lora_integration.py  test_replicate_integration.py  test_stdio_config.py
workflows/: FluxKrea.json
